# Octopipes

./: .gitignore  .travis.yml  Cargo.toml  README.md
docs/: clients.md  protocol.md
octopipes/: Cargo.toml
octopipes-clients/: Cargo.toml  README.md
octopipes-clients/src/: octopipes_recv.rs  octopipes_send.rs
octopipes-server/: Cargo.toml  README.md
octopipes-server/config/: octopipes.yml
octopipes-server/src/: lib.rs  octopipes.rs
octopipes-server/src/config/: mod.rs
octopipes-server/src/logger/: mod.rs
