[package]
name = "octopipes-clients"
version = "1.0.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Octopipes-clients provides two application to quickly send and receive message from an Octopipes server."
homepage = "https://github.com/ChristianVisintin/Octopipes"
repository = "https://github.com/ChristianVisintin/Octopipes"

[dependencies]
rustypipes = "0.1.1"
getopts = "0.2.21"
rand = "0.7.3"
ctrlc = "3.1.3"

[[bin]]
name = "octopipes-send"
path = "src/octopipes_send.rs"

[[bin]]
name = "octopipes-recv"
path = "src/octopipes_recv.rs"
