[package]
name = "octopipes-server"
version = "0.1.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Octopipes-server is the official server to implement IPC based on the Octopipes Protocol."
homepage = "https://github.com/ChristianVisintin/Octopipes"
repository = "https://github.com/ChristianVisintin/Octopipes"

[dependencies]
rustypipes = "0.1.1"
yaml-rust = "0.4.3"
getopts = "0.2.21"
ctrlc = "3.1.3"
log = "0.4.8"

[[bin]]
name = "octopipes-server"
path = "src/octopipes.rs"
